<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/borderWineItem"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/border_item_vine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"/>

    <ImageView
        android:id="@+id/photoWineInItemWineLayout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintStart_toStartOf="@id/borderWineItem"
        app:layout_constraintTop_toTopOf="@id/borderWineItem"
        android:background="@color/grey"
        android:src="@drawable/ic_baseline_photo_camera_24"/>
    <TextView
        android:id="@+id/nameWineInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text=" "
        tools:text="Название вина"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/photoWineInItemWineLayout"
        app:layout_constraintTop_toTopOf="@id/borderWineItem"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/titleRatingInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_item_wine"
        app:layout_constraintStart_toStartOf="@id/nameWineInItemWineLayout"
        app:layout_constraintTop_toBottomOf="@id/nameWineInItemWineLayout"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/valueRatingInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        tools:text="5.0"
        app:layout_constraintStart_toEndOf="@id/titleRatingInItemWineLayout"
        app:layout_constraintTop_toTopOf="@id/titleRatingInItemWineLayout"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/starRatingInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/valueRatingInItemWineLayout"
        app:layout_constraintTop_toTopOf="@id/valueRatingInItemWineLayout"
        app:layout_constraintBottom_toBottomOf="@id/valueRatingInItemWineLayout"
        tools:src="@drawable/ic_baseline_star_24"
        android:layout_marginStart="5dp"
        app:tint="@color/yellow" />
    <TextView
        android:id="@+id/titleYearInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleRatingInItemWineLayout"
        app:layout_constraintTop_toBottomOf="@id/titleRatingInItemWineLayout"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/year_item_wine"/>
    <TextView
        android:id="@+id/valueYearInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/titleYearInItemWineLayout"
        app:layout_constraintTop_toTopOf="@id/titleYearInItemWineLayout"
        tools:text="2018"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/grey_value"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/titleTypeInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleYearInItemWineLayout"
        app:layout_constraintTop_toBottomOf="@id/titleYearInItemWineLayout"
        android:textSize="12sp"
        android:text="@string/type_item_wine"/>
    <TextView
        android:id="@+id/valueTypeInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/titleTypeInItemWineLayout"
        app:layout_constraintTop_toTopOf="@id/titleTypeInItemWineLayout"
        tools:text="красный"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:textColor="@color/grey_value"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/titleCountryInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/titleTypeInItemWineLayout"
        app:layout_constraintTop_toBottomOf="@id/titleTypeInItemWineLayout"
        android:textSize="12sp"
        android:text="@string/country_item_wine"/>
    <TextView
        android:id="@+id/valueCountryInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/titleCountryInItemWineLayout"
        app:layout_constraintTop_toTopOf="@id/titleCountryInItemWineLayout"
        tools:text="Германия"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/grey_value"
        android:textStyle="bold"/>
    <ImageButton
        android:id="@+id/iconCommentInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/borderWineItem"
        app:layout_constraintTop_toTopOf="@id/borderWineItem"
        app:layout_constraintBottom_toTopOf="@id/iconLikeInItemWineLayout"
        android:src="@drawable/ic_baseline_mode_comment_24"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:tint="@color/grey"/>
    <TextView
        android:id="@+id/valueCommentInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/iconCommentInItemWineLayout"
        app:layout_constraintEnd_toEndOf="@id/iconCommentInItemWineLayout"
        app:layout_constraintTop_toBottomOf="@id/iconCommentInItemWineLayout"
        android:text=" "
        tools:text="25"
        android:textSize="12sp"/>
    <ImageButton
        android:id="@+id/iconLikeInItemWineLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/borderWineItem"
        app:layout_constraintBottom_toBottomOf="@id/borderWineItem"
        app:layout_constraintTop_toBottomOf="@id/iconCommentInItemWineLayout"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_marginEnd="15dp"
        android:background="@null"
        app:tint="@color/yellow"/>
    

</androidx.constraintlayout.widget.ConstraintLayout>